// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`sidebar shell snapshots > renders the collapsed rail after the crossfade settles, in place 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root collapsed railIn quietBars"
    style=""
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="Open sidebar"
        class="iconButton toggle"
        type="button"
      >
        <span
          aria-hidden="true"
          class="railMark"
        >
          <div
            data-slot="sidebar.brand.mark"
            style="display: contents;"
          />
        </span>
        <svg
          class="panelIcon"
          data-content="35f95b0c"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
      </button>
    </div>
    <button
      aria-label="New session"
      class="newSession"
      type="button"
    >
      <svg
        data-content="c0ce4dcc"
        fill="none"
        height="18"
        viewBox="0 0 16 16"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      />
    </button>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column (wordmark, capsule, empty holes) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="New session"
        class="newSession headerNewSession wide"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="newSessionLabel"
        >
          New Session
        </span>
      </button>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`sidebar shell snapshots > renders the expanded column in the default locale (zh, no setLocale) 1`] = `
<div
  data-slot="sidebar"
  style="display: contents;"
>
  <div
    class="root quietBars"
    style="width: 300px;"
  >
    <div
      class="logoRow"
    >
      <button
        aria-label="新建会话"
        class="newSession headerNewSession wide"
        type="button"
      >
        <svg
          data-content="c0ce4dcc"
          fill="none"
          height="18"
          viewBox="0 0 16 16"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        />
        <span
          class="newSessionLabel"
        >
          新会话
        </span>
      </button>
    </div>
    <div
      class="regionArea"
    >
      <div
        data-slot="sidebar.workspaces"
        style="display: contents;"
      />
    </div>
    <div
      class="footArea"
    >
      <div
        class="footerActions"
      >
        <div
          data-slot="sidebar.footer.action"
          style="display: contents;"
        />
      </div>
    </div>
  </div>
</div>
`;
